--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_vam_ts_coding
-	previous = 
-	base = 29a5b410b
+	previous = 29a5b410b
+	base = 5f0745d80
 	trim = 
 	trimbase = 
