--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_vam_ts_coding
-	previous = 
-	base = d88261a6a
+	previous = d88261a6a
+	base = 0469b2788
 	trim = 
 	trimbase = 
