--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = 2d4eea177
+	previous = 2d4eea177
+	base = 8f0961028
 	trim = 
 	trimbase = 
