--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_mcm_uulm_msgs
-	previous = 
-	base = 2a14a3f36
+	previous = 2a14a3f36
+	base = 92739bf40
 	trim = 
 	trimbase = 
