--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_spatem_ts_coding
-	previous = 
-	base = e58298601
+	previous = e58298601
+	base = 04a4b4b19
 	trim = 
 	trimbase = 
