--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_spatem_ts_coding
-	previous = 
-	base = 7c1246cb1
+	previous = 7c1246cb1
+	base = 6422f2170
 	trim = 
 	trimbase = 
