--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_mapem_ts_coding
-	previous = 
-	base = 716e3106c
+	previous = 716e3106c
+	base = 92b798bb5
 	trim = 
 	trimbase = 
