--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_mapem_ts_coding
-	previous = 
-	base = e6eb6643a
+	previous = e6eb6643a
+	base = 44aa10831
 	trim = 
 	trimbase = 
