--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_cpm_ts_coding
-	previous = 
-	base = 740abfa65
+	previous = 740abfa65
+	base = 3a7149933
 	trim = 
 	trimbase = 
