--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_cpm_ts_coding
-	previous = 
-	base = 37f7b5d7c
+	previous = 37f7b5d7c
+	base = eb78a238b
 	trim = 
 	trimbase = 
