--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_cam_ts_coding
-	previous = 
-	base = f13a74cbc
+	previous = f13a74cbc
+	base = 3580c6201
 	trim = 
 	trimbase = 
