--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_cam_ts_coding
-	previous = 
-	base = 9a05a78c3
+	previous = 9a05a78c3
+	base = 2025ed1b7
 	trim = 
 	trimbase = 
