--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_spatem_ts_msgs
-	previous = 
-	base = 96d40bf57
+	previous = 96d40bf57
+	base = 5f431dca2
 	trim = 
 	trimbase = 
