--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_spatem_ts_msgs
-	previous = 
-	base = cec0738f2
+	previous = cec0738f2
+	base = cd760ffc6
 	trim = 
 	trimbase = 
