--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_mapem_ts_msgs
-	previous = 
-	base = e4227efe8
+	previous = e4227efe8
+	base = aa02bfc8d
 	trim = 
 	trimbase = 
