--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_mapem_ts_msgs
-	previous = 
-	base = 120d7c336
+	previous = 120d7c336
+	base = f4f5ba0b9
 	trim = 
 	trimbase = 
