--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_coding
-	previous = 
-	base = b007810b7
+	previous = b007810b7
+	base = 3249a6c76
 	trim = 
 	trimbase = 
