--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_coding
-	previous = 
-	base = 2cf1cac69
+	previous = 2cf1cac69
+	base = c627d9a2e
 	trim = 
 	trimbase = 
