--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_conversion
-	previous = 
-	base = 6fd091726
+	previous = 6fd091726
+	base = 24516fa89
 	trim = 
 	trimbase = 
