--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_conversion
-	previous = 
-	base = 83ef0ade3
+	previous = 83ef0ade3
+	base = 07641ff20
 	trim = 
 	trimbase = 
