--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_msgs_utils
-	previous = 
-	base = 1170305bd
+	previous = 1170305bd
+	base = 9ada1ae14
 	trim = 
 	trimbase = 
