--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_msgs_utils
-	previous = 
-	base = 56184a043
+	previous = 56184a043
+	base = b26c35afa
 	trim = 
 	trimbase = 
