--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_cpm_ts_conversion
-	previous = 
-	base = bc4b5d0c3
+	previous = bc4b5d0c3
+	base = 05d174a11
 	trim = 
 	trimbase = 
