--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_cpm_ts_conversion
-	previous = 
-	base = ba23d139d
+	previous = ba23d139d
+	base = d8898780c
 	trim = 
 	trimbase = 
