--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_denm_conversion
-	previous = 
-	base = 7694aed03
+	previous = 7694aed03
+	base = d0814a1af
 	trim = 
 	trimbase = 
