--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_denm_conversion
-	previous = 
-	base = b3cbe9d0c
+	previous = b3cbe9d0c
+	base = ab0c2cbb7
 	trim = 
 	trimbase = 
