--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_cam_ts_msgs
-	previous = 
-	base = 20113aafb
+	previous = 20113aafb
+	base = 54e61b32f
 	trim = 
 	trimbase = 
