--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_cam_ts_msgs
-	previous = 
-	base = 129fddb60
+	previous = 129fddb60
+	base = 1cdb46df3
 	trim = 
 	trimbase = 
