--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_cam_msgs
-	previous = 
-	base = a2fd27968
+	previous = a2fd27968
+	base = 6e0b655ea
 	trim = 
 	trimbase = 
