--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_cam_msgs
-	previous = 
-	base = 2fe0b4d65
+	previous = 2fe0b4d65
+	base = fcb907a06
 	trim = 
 	trimbase = 
