--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_messages
-	previous = 
-	base = ff2dea365
+	previous = ff2dea365
+	base = fe35388d7
 	trim = 
 	trimbase = 
