--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_messages
-	previous = 
-	base = 36f4e76f9
+	previous = 36f4e76f9
+	base = 71d7d5cd8
 	trim = 
 	trimbase = 
