--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_msgs
-	previous = 
-	base = a0ccbc88f
+	previous = a0ccbc88f
+	base = 579648a99
 	trim = 
 	trimbase = 
