--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_msgs
-	previous = 
-	base = 264e399a4
+	previous = 264e399a4
+	base = ab74ac631
 	trim = 
 	trimbase = 
