--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_vam_ts_msgs
-	previous = 
-	base = 8a09845dc
+	previous = 8a09845dc
+	base = dab77248c
 	trim = 
 	trimbase = 
