--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_vam_ts_msgs
-	previous = 
-	base = bfd44faec
+	previous = bfd44faec
+	base = dd2523a37
 	trim = 
 	trimbase = 
