--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_denm_ts_conversion
-	previous = 
-	base = 7735503ed
+	previous = 7735503ed
+	base = a0b7d452f
 	trim = 
 	trimbase = 
