--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_denm_ts_msgs
-	previous = 
-	base = ca890a0de
+	previous = ca890a0de
+	base = c5f38e780
 	trim = 
 	trimbase = 
