--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_denm_ts_msgs
-	previous = 
-	base = 92c99a000
+	previous = 92c99a000
+	base = 2d32a9bc1
 	trim = 
 	trimbase = 
