--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_rviz_plugins
-	previous = 
-	base = b1f5b165a
+	previous = b1f5b165a
+	base = 7ee3e99d1
 	trim = 
 	trimbase = 
