--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_rviz_plugins
-	previous = 
-	base = ad2e71c7d
+	previous = ad2e71c7d
+	base = 7ba718c82
 	trim = 
 	trimbase = 
