--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_cam_conversion
-	previous = 
-	base = b9b78d483
+	previous = b9b78d483
+	base = 911d10756
 	trim = 
 	trimbase = 
