--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_cam_conversion
-	previous = 
-	base = aa476ff85
+	previous = aa476ff85
+	base = 618a25285
 	trim = 
 	trimbase = 
