--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/etsi_its_denm_msgs
-	previous = 
-	base = df95c1079
+	previous = df95c1079
+	base = d81689bb3
 	trim = 
 	trimbase = 
