--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/etsi_its_denm_msgs
-	previous = 
-	base = 3422751c0
+	previous = 3422751c0
+	base = 9c98ffe35
 	trim = 
 	trimbase = 
