--- a/tracks.yaml
+++ b/tracks.yaml
@@ -97,9 +97,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: main
+    last_release: v3.3.0
+    last_version: 3.3.0
     name: etsi_its_messages
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: git@github.com:ros2-gbp/etsi_its_messages-release.git
     release_tag: v:{version}
     ros_distro: kilted
